// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateSyntheticHistory > renders Alex Rivera identically 1`] = `
{
  "sessions": [
    {
      "date": "2026-06-28",
      "duration": 58,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-06-29",
      "duration": 58,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-06-30",
      "duration": 37,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-05",
      "duration": 41,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-06",
      "duration": 54,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-07",
      "duration": 60,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-12",
      "duration": 37,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-13",
      "duration": 47,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-14",
      "duration": 55,
      "feedbackBody": 5,
      "feedbackComment": "Felt strong the whole way.",
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-18",
      "duration": 60,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-19",
      "duration": 36,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-20",
      "duration": 45,
      "feedbackBody": 3,
      "feedbackComment": "Felt strong the whole way.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-21",
      "duration": 58,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-25",
      "duration": 36,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-26",
      "duration": 55,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-27",
      "duration": 35,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-28",
      "duration": 48,
      "feedbackBody": 3,
      "feedbackComment": "Held the numbers but it cost me.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-01",
      "duration": 57,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-02",
      "duration": 33,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-03",
      "duration": 50,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-04",
      "duration": 32,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-08",
      "duration": 59,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-09",
      "duration": 52,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-10",
      "duration": 37,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-11",
      "duration": 57,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-16",
      "duration": 49,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-17",
      "duration": 55,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-18",
      "duration": 50,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-22",
      "duration": 32,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-23",
      "duration": 43,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-24",
      "duration": 53,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-25",
      "duration": 56,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-29",
      "duration": 52,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-30",
      "duration": 38,
      "feedbackBody": 5,
      "feedbackComment": "Easy day done easy for once.",
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-31",
      "duration": 46,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-09-01",
      "duration": 59,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
  ],
  "unavailableDates": [
    "2026-07-11",
    "2026-07-31",
    "2026-08-21",
  ],
}
`;

exports[`generateSyntheticHistory > renders Sam Chen identically 1`] = `
{
  "sessions": [
    {
      "date": "2026-06-26",
      "duration": 63,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-06-27",
      "duration": 114,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-06-28",
      "duration": 44,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-06-29",
      "duration": 54,
      "feedbackBody": 5,
      "feedbackComment": "Easy day done easy for once.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-06-30",
      "duration": 115,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-02",
      "duration": 76,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-03",
      "duration": 61,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-04",
      "duration": 114,
      "feedbackBody": 3,
      "feedbackComment": "Easy day done easy for once.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-05",
      "duration": 41,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-06",
      "duration": 64,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-07",
      "duration": 101,
      "feedbackBody": 2,
      "feedbackComment": "Legs never really woke up.",
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-10",
      "duration": 119,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-11",
      "duration": 70,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-12",
      "duration": 59,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-13",
      "duration": 99,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-14",
      "duration": 44,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-16",
      "duration": 62,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-17",
      "duration": 113,
      "feedbackBody": 3,
      "feedbackComment": "Held the numbers but it cost me.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-18",
      "duration": 76,
      "feedbackBody": 5,
      "feedbackComment": "Felt strong the whole way.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-19",
      "duration": 64,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-20",
      "duration": 109,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-21",
      "duration": 45,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-23",
      "duration": 42,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-07-24",
      "duration": 65,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-25",
      "duration": 111,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-26",
      "duration": 75,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-07-27",
      "duration": 64,
      "feedbackBody": 5,
      "feedbackComment": "Better than last week, still cautious on the descents.",
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-07-28",
      "duration": 109,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-30",
      "duration": 118,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-07-31",
      "duration": 44,
      "feedbackBody": 4,
      "feedbackComment": "Held the numbers but it cost me.",
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-01",
      "duration": 54,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-02",
      "duration": 119,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-03",
      "duration": 73,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-04",
      "duration": 62,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-06",
      "duration": 58,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-07",
      "duration": 105,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-08",
      "duration": 45,
      "feedbackBody": 3,
      "feedbackComment": "Better than last week, still cautious on the descents.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-09",
      "duration": 59,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-10",
      "duration": 102,
      "feedbackBody": 3,
      "feedbackComment": "Felt strong the whole way.",
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-11",
      "duration": 71,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-13",
      "duration": 71,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-14",
      "duration": 62,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-15",
      "duration": 115,
      "feedbackBody": 2,
      "feedbackComment": "Easy day done easy for once.",
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-16",
      "duration": 45,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-17",
      "duration": 61,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-18",
      "duration": 108,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-21",
      "duration": 115,
      "feedbackBody": 5,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-22",
      "duration": 75,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 5,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-23",
      "duration": 63,
      "feedbackBody": 4,
      "feedbackComment": "Easy day done easy for once.",
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-24",
      "duration": 120,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-25",
      "duration": 48,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
    {
      "date": "2026-08-27",
      "duration": 60,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-28",
      "duration": 106,
      "feedbackBody": 2,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-08-29",
      "duration": 71,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Tempo session",
      "type": "Tempo",
      "zone": "Zone 3",
    },
    {
      "date": "2026-08-30",
      "duration": 57,
      "feedbackBody": null,
      "feedbackComment": null,
      "feedbackMind": null,
      "note": null,
      "origin": "coach",
      "status": "skipped",
      "title": "Intensity session",
      "type": "Intensity",
      "zone": "Zone 4",
    },
    {
      "date": "2026-08-31",
      "duration": 110,
      "feedbackBody": 3,
      "feedbackComment": null,
      "feedbackMind": 3,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Endurance session",
      "type": "Endurance",
      "zone": "Zone 2",
    },
    {
      "date": "2026-09-01",
      "duration": 45,
      "feedbackBody": 4,
      "feedbackComment": null,
      "feedbackMind": 4,
      "note": null,
      "origin": "coach",
      "status": "completed",
      "title": "Recovery session",
      "type": "Recovery",
      "zone": "Zone 1",
    },
  ],
  "unavailableDates": [
    "2026-07-09",
    "2026-07-29",
    "2026-08-20",
  ],
}
`;
